# mcp_mindmup2_google_drive

./: .dockerignore  .env.test  .gitignore  DOCKER_DEPLOYMENT.md  Dockerfile  README.md  docker-compose.yml  main.py  makefile  mcp_server.sh  pyproject.toml  readme.md  requirements.txt  run.py  setup.py
deployment/: .env.dev  .env.example  .env.prod  Dockerfile  docker-compose-dev.yml  docker-compose-prod.yml  mcp-config-local.json  mcp-server-config.json
src/core/: gdrive_client.py  gdrive_feature.py  mcp_server.py  mindmup_manager.py  mindmup_parser.py
src/model/: common_model.py  gdrive_model.py  mindmup_model.py
src/models/: file_models.py  mindmap_models.py
src/test/: test_config.py
src/tests/: mindmup_test.py  test_mindmup_integration.py
src/utility/: enum.py
src/utils/: config.py  enum.py  exception.py  logger.py
